--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-*.class
-*.log
+*/*.DS_Store
+.classpath
+.project
+.settings/
+.idea
+target/
+project/target/
+project/project/
+spark-warehouse/
+bin/
+.idea_modules/
+projectFilesBackup/
